--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = [
     {name = "AlexKsky",email = "sharkline942@gmail.com"}
 ]
+readme = "README.md"
 
 requires-python = ">=3.12"
 dependencies = [
@@ -14,7 +15,9 @@ dependencies = [
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
-    "ruff (>=0.14.9,<0.15.0)"
+    "ruff (>=0.14.9,<0.15.0)",
+    "asyncpg (>=0.31.0,<0.32.0)",
+    "black (>=25.12.0,<26.0.0)"
 ]
 
 [build-system]
