--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,14 @@ services:
       - "8000:8000"
     networks:
       - network
-    env_file:
-      - ".env"
-    command: sh -c "alembic upgrade head && python -m main"
+    environment:
+      TEST_DB_URL: "postgresql+asyncpg://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/test"
+    command: >
+      sh -c "
+      alembic upgrade head &&
+      alembic -x db_url=$${TEST_DB_URL} upgrade head &&
+      python -m main
+      "
     depends_on:
       db:
         condition: service_healthy
@@ -34,6 +39,7 @@ services:
       retries: 5
     volumes:
       - pg_data:/var/lib/postgresql
+      - ./tests/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
 
 volumes:
   pg_data:
