--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
     "alembic (>=1.17.2,<2.0.0)",
     "ruff (>=0.14.9,<0.15.0)",
     "asyncpg (>=0.31.0,<0.32.0)",
-    "black (>=25.12.0,<26.0.0)"
+    "black (>=25.12.0,<26.0.0)",
+    "pytest (>=9.0.2,<10.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)"
 ]
 
 [build-system]
