--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,21 @@ dependencies = [
     "black (>=25.12.0,<26.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "pytest-asyncio (>=1.3.0,<2.0.0)"
+    "pytest-asyncio (>=1.3.0,<2.0.0)",
+    "pytest-env (>=1.2.0,<2.0.0)",
 ]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest]
+pythonpath = ["."]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+#asyncio_default_test_loop_scope = "function"
+#asyncio_default_fixture_loop_scope = "module"
+env = [
+    "DB_HOST=localhost",
+    "DB_NAME=test",
+]
